Initial GraphQL structure
This includes handling configuration and validation of such. Setting up
initial auto registration for generated code (ex: see ModuleInfo.cs).

These changes also includes reduction of startup tasks, meaning: it will
always start both http and https ports but will redirect all requests to
https by it self.

Updated pipeline to include schema generation test, as in: making sure
GraphQL server is able to generate a valid schema with current setup or
not (should prevent future breaking changes regarding available types
and generated schema).

--- a/.github/workflows/dotnet_build_test.yml
+++ b/.github/workflows/dotnet_build_test.yml
@@ -30,3 +30,6 @@ jobs:
 
     - name: Test
       run: dotnet test --no-build --verbosity normal
+
+    - name: Generate GraphQL schema
+      run: dotnet run --project ./src/Backend/Backend.Api/ -- schema export
