--- a/src/Backend/Backend.Api/Backend.Api.csproj
+++ b/src/Backend/Backend.Api/Backend.Api.csproj
@@ -6,4 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.5.2" />
+    <PackageReference Include="HotChocolate" Version="13.2.1" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="13.2.1" />
+    <PackageReference Include="HotChocolate.AspNetCore.CommandLine" Version="13.2.1" />
+    <PackageReference Include="HotChocolate.Data" Version="13.2.1" />
+    <PackageReference Include="HotChocolate.PersistedQueries.InMemory" Version="13.2.1" />
+    <PackageReference Include="HotChocolate.Types.Analyzers" Version="13.2.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
+  </ItemGroup>
+
 </Project>
