--- a/src/Backend/Backend.Api/Backend.Api.csproj
+++ b/src/Backend/Backend.Api/Backend.Api.csproj
@@ -18,4 +18,9 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Integration\Integration.SteamAPI\Integration.SteamAPI.csproj" />
+    <ProjectReference Include="..\..\Integration\Integration.BattleBitAPI\Integration.BattleBitAPI.csproj" />
+  </ItemGroup>
+
 </Project>
